<resources>
    <string name="app_name">কবিতা এখন বৃদ্ধ হয়ে এসেছে</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_text">শীত তুমি আসবে কবে\n
    কুয়াশার চাদর মুড়ে\n
    খাব গুড়ের পিঠা\n
    তুমি চলে গেছ এখনও\n
    আমার মুখ মিঠা।\n</string>
    <string name="poet_name">শফিকুল ফেরদৌস</string>
    <string name="poet_details">তিনি ময়মনসিংহ জেলার বাঘাডোবা গ্রামে এক সম্ভ্রান্ত মুসলিম পরিবারে ২৭শে এপ্রিল, ১৯৬৪ ইং সনে জন্ম গ্রহণ করেন।\n
        তার শিক্ষাজীবন শুরু হয় নিজ গ্রামের সরকারী প্রাথমিক বিদ্যালয় থেকে।
        সেখানে তিনি  পঞ্চম শ্রেণী পর্যন্ত লেখা-পড়া করেন এবং পরাণগঞ্জ উচ্চ বিদ্যালয় থেকে নবম শ্রেণী পাশ করেন।
        উচ্চ শিক্ষা গ্রহণ করার প্রবল ইচ্ছা থাকা সত্বেও টাইফয়েডে আক্রান্ত হয়ে শারিরীক ক্ষতিগ্রস্থ হওয়ায় লেখা-পড়া থেকে বঞ্চিত হন।\n
        ১৯৮২ইং সনে তার বাবা  ইন্তেকাল করেন। তিনি ছয় ভাই-বোন এর মধ্যে জেষ্ঠ্য। তিনি ১৯৮৬ সনে মোছাঃ নিলুফা বেগম এর সাথে বিবাহ-বন্ধনে আবদ্ধ হন।
        দীর্ঘ দাম্পত্য জীবন পেরিয়ে তিনি তিন সন্তানের জনক হন। ১৯৯৯ সনে তিনি তার কর্মজীবন শুরু করেন এশিয়ান ইউনিভার্সিটি অব বাংলাদেশ-এর কম্পিউটার সাইন্স বিভাগে।
        অদ্যবধি তিনি এখানে কর্মরত আছেন।  </string>
    <string name="book_name">কবিতা এখন বৃদ্ধ হয়ে এসেছে</string>
    <string name="index">সূচিপত্র</string>
    <string name="about_author">কবি পরিচিতি</string>
    <string name="settings">সেটিংস</string>
    <string name="share_apk">APK শেয়ার করুন</string>
    <string name="other_apps">অন্যান্য এপস</string>
    <string name="give_rating">রেটিং দিন</string>
    <string name="very_bad_part1">
     মোবাইল এখন পরিবারের ভরসা&lt;br /&gt;
    তবু হয়েছে নিরাশা &lt;br /&gt;
    মোবাইল মিডিয়া আর ইন্টারনেট &lt;br /&gt;
    এই সবি মিলে</string>
    <string name="very_bad_part2">&lt;br /&gt;
    &lt;br /&gt;
    সহিতে পারেনা প্রজন্ম ভার&lt;br /&gt;
    তাই মানেনা শাসন আর&lt;br /&gt;
    কবিতা নয় চাই মনোরঞ্জন&lt;br /&gt;
    প্রেমিক প্রেমিকা করে মোবাইল অন&lt;br /&gt;
    &lt;br /&gt;
    প্রতারণা হতে চায়না কোন নারী&lt;br /&gt;
    তবু হয় ভুড়ী ভুড়ী&lt;br /&gt;
    মোবাইল মিডিয়া আর ইন্টারনেট&lt;br /&gt;
     এই সবি মিলে</string>
    <string name="very_bad_part3">
     &lt;br /&gt;
    &lt;br /&gt;
    সময়ের ভারে ফল পাকিলে মিষ্ট হয়&lt;br /&gt;
    অসময়ে পাকিলে ফল রঙ্গীন হয় তবু মিষ্ট নয়&lt;br /&gt;
    কবিতা লেখে হবে দেশ প্রেম&lt;br /&gt;
    মানুষকে ভালবাসাই মানুষের প্রেম।&lt;br /&gt;
     </string>
    <string name="update_apk">APK আপডেট দিন</string>
    <string-array name="poem_titles">
        <item>স্বদেশ</item>
        <item>সেন্ট-মার্টিন</item>
        <item>কবিতা এখন বৃদ্ধ হয়ে এসেছে</item>
        <item>পিঁপিঁলিকা</item>
        <item>রবি</item>
        <item>বাহাদুর</item>
        <item>আর্শীবাদ</item>
        <item>রাজধানী</item>
        <item>প্রকৃতি</item>
        <item>এ ইউ বি </item>
        <item>হিতৈষী</item>
        <item>আমারি নয়নে তুমি</item>
        <item>শিক্ষাগুরু</item>
        <item>বৈষম্য</item>
        <item>ঈদ-মোবারক</item>
        <item>ধোঁকাবাজি</item>
        <item>Very Bad</item>
        <item>শহীদ</item>
        <item>দিশেহারা</item>
        <item>চাচা-ভাতিজা</item>
        <item>ব্রহ্মপুত্র</item>
        <item>বৈশাখ</item>
        <item>বর্ষ</item>
        <item>মাটির মানুষ</item>
        <item>শীত</item>
        <item>সময়ে কাজ</item>
        <item>বীরত্ত্ব</item>
        <item>চেতনা</item>
        <item>মানুষ</item>
        <item>ধূম পান বিষ পান</item>
        <item>বই পড়ি </item>
        <item>সড়ক</item>
        <item>পল্লীর কান্না</item>
        <item>বন্ধু</item>
        <item>রাজনীতি</item>
        <item>উজ্জীবন </item>
        <item>প্রতিভা</item>
        <item>তোমারি করুণা</item>
        <item>সর্ব শক্তিমান</item>
        <item> উদার </item>
        <item>মোহাম্মদ রাসূল</item>
        <item>পথ</item>
        <item>একটু এসো</item>
        <item>পদতলে</item>
        <item>ক্ষমার পথ </item>
        <item>পাহাড় </item>
        <item>তোমার স্মরণে </item>
        <item>অভিমান</item>
        <item>কবর</item>
        <item>সেই দিন</item>
        <item>বিরহ</item>
        <item>নতুন পাতা</item>
        <item>নিমন্ত্রণ</item>
        <item>ছিন্ন প্রেম</item>
        <item>অথৈ-এর বিড়াল </item>
        <item>ছিন্ন</item>
        <item>নীড়</item>
        <item>কবিতা</item>
        <item>বাঁধন</item>
        <item>বাল্যবন্ধু </item>
        <item>সাঁতারে তরী</item>
        <item>বাংলার বাঘ</item>
        <item>মনের আয়না</item>
        <item>হতে চাও</item>
        <item>ভাটির টানে</item>
        <item>যমুনা</item>
        <item>সিক্ত</item>
        <item>তাজমহল</item>
    </string-array>
</resources>