<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_index"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/index"/>

        <item
            android:id="@+id/nav_author"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/about_author" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_apk" />
            <item
                android:id="@+id/nav_rating"
                android:icon="@drawable/ic_star_rate_black_18dp"
                android:title="@string/give_rating"/>
            <item
                android:id="@+id/nav_more_apps"
                android:icon="@drawable/ic_apps_black_24dp"
                android:title="@string/other_apps" />
        </menu>
    </item>

</menu>
